<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="ahsan_malik.cvmakermvvm.models.Certification"/>
        <import type="ahsan_malik.cvmakermvvm.views.fragments.CertificateFragment"/>

        <variable
            name="certificate"
            type="Certification" />

        <variable
            name="handler"
            type="CertificateFragment" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:textSize="38sp"
            android:layout_marginVertical="7dp" />

        <!--title -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={certificate.title}"
                android:textColor="@color/colorAccent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--institute -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/organization"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={certificate.organization}"
                android:textColor="@color/colorAccent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--score -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/duration"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={certificate.duration}"
                android:textColor="@color/colorAccent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_margin="4dp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:layout_margin="4dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_margin="4dp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </LinearLayout>
</layout>